Fix the Visibility of Admin Tabs (#1508)

--- a/frontend/app/styles/partials/create-badge.scss
+++ b/frontend/app/styles/partials/create-badge.scss
@@ -31,6 +31,6 @@
   }
 }
 
-.hidden {
+.hide {
   display: none !important;
 }
